<resources>
    <string name="app_name">P09-NDPSongs</string>
    <string name="song_title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">insert</string>
    <string name="showlist">showlist</string>
    <string name="show_all_songs_with_5_stars">SHOW ALL SONGS WITH 5 STARS</string>
</resources>