<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/tvSongTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etSongTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter song title here"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvSingers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singers"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etSingers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter singer's name here"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter year song released"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvStars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stars"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgStars"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnInsert"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insert" />

            <Button
                android:id="@+id/btnShow"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showlist" />
        </LinearLayout>

</LinearLayout>
